--- a/src/pages/Dashboad/dashboad.css
+++ b/src/pages/Dashboad/dashboad.css
@@ -7,6 +7,7 @@
     text-align: center;
 }
 .dashboad-summery{
+    border-bottom: 20px solid rgb(229, 137, 17);
     background-color: aqua;
     width: 90%;
     height: 100px;
@@ -84,4 +85,47 @@
 .section-4{
     display: flex;
     justify-content: space-evenly;
+}
+
+.sales-report{
+    background-color: rgba(250, 235, 215, 0.519);
+    margin: 20px 10px 20px 10px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.sales-report-title{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.product-details{
+    background-color: rgba(250, 235, 215, 0.519);
+    margin: 20px 10px 20px 10px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.product-details-title{
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.category-wise-sales{
+    background-color: rgba(250, 235, 215, 0.519);
+    margin: 20px 10px 20px 10px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.category-wise-sales-title{
+    text-align: center;
+}
+
+.category-wise-quotation{
+    background-color: rgba(250, 235, 215, 0.519);
+    margin: 20px 10px 20px 10px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.category-wise-quotation-title{
+    text-align: center;
 }
