--- a/src/pages/inventoryManage/add/inventoryADD.css
+++ b/src/pages/inventoryManage/add/inventoryADD.css
@@ -1,3 +1,6 @@
+.add_inventory{
+    background-color: #879ace;
+}
 .add{
     background-color: aqua;
     margin: 10px 100px 10px 100px;
@@ -30,7 +33,7 @@ label{
     margin: 10px;
 }
 .description_input{
-    height: 60px;
+    height: 30px;
     margin: 20px 10px 10px 10px;
 }
 
@@ -52,20 +55,30 @@ label{
     height: 30px;
     border: none
 }
-
-.add_button{
-    margin: 30px 10px 10px 10px ;
-    position: relative;
-    background-color:#0a0a23;
-    left: 80%;
-    color: #fff;
-    border:none; 
-    border-radius:10px; 
-    padding:15px;
-    min-height:30px; 
-    min-width: 120px;
+.product_name_input,.supplier_input, .price_input,.units_input,.description_input,.price_input::placeholder{
+    text-align: center;
 }
-.add_button:hover {
-      background-color:#002ead;
-      transition: 0.7s;
+
+.add_button__{
+    background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 20px 10px 10px 80px;
+}
+.add_button__:hover {
+      box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
   }
