--- a/src/pages/Raw_input/add/add.css
+++ b/src/pages/Raw_input/add/add.css
@@ -5,11 +5,18 @@
     text-align: center;
 }
 .main_add{
+    
    
     background-color: var(--form-backgroung-color);
-    margin: 10px 450px 10px 450px;
+    margin: 10px 20px 10px 20px;
     border-radius: 10px;
-    padding-bottom: 20px;
+    
+    
+   
+}
+.couple{
+    display: flex;
+    justify-content: space-evenly;
 }
 
 label{
@@ -20,7 +27,7 @@ label{
     text-align: right;
     position: relative;
 }
-input{
+input, select{
     width: 250px;
     
 }
@@ -28,13 +35,27 @@ input{
     display: flex;
     justify-content: space-between;
 }
+.add_remarks{
+    
+    display: flex;
+    justify-content: space-evenly;
+}
+.remarks{
+    width: 700px;
+    height: 40px;
+    border-radius: 10px;
+}
 
-
-
+.select_unit,.select_supplier{
+    height: 20px;
+    display: flex;
+    justify-content: space-between;
+}
 
 
 
 .add_button_ {
+ 
   background-color: #c2fbd7;
   border-radius: 100px;
   box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
@@ -51,7 +72,9 @@ input{
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  margin: 20px 10px 10px 80px;
+  margin: 20px 10px 10px 10px;
+  position: relative;
+  left: 50%;
 }
 
 .add_button_:hover {
