--- a/src/components/SideBar/sidebar.css
+++ b/src/components/SideBar/sidebar.css
@@ -8,22 +8,22 @@
     margin-top: -20px;
     width: 50px;
     height: 100vh;
-    color: aquamarine;
-    background-color: blue;
+    color: rgba(37, 37, 37, 0.505);
+    background-color: rgb(49, 49, 49);
     overflow: hidden;
 }
 .nav-bar-toggle{
     
     width: 150px;
     height: 100vh;
-    color: aquamarine;
-    background-color: blue;
+    color: rgb(0, 0, 0);
+    background-color: rgb(49, 49, 49);
 }
 .nav-bar:hover{
     width: 150px;
     height: 100vh;
     color: aquamarine;
-    background-color: blue;
+    background-color: rgb(33, 33, 33);
     position: fixed;
     
 }
@@ -59,16 +59,16 @@ ul{
 .link_li{
     padding: 7px;
     margin: 3px;
-    background-color: rgb(161, 47, 226);
+    background-color: rgb(140, 140, 140);
     border-radius: 3px;
 }
 .link_li:hover{
-    background-color: blue;
+    background-color: rgb(119, 119, 119);
 }
 .link_li_clicked{
     padding: 7px;
     margin: 3px;
-    background-color: rgb(59, 157, 237);
+    background-color: rgb(189, 189, 189);
     border-radius: 3px;
 }
 .link-icon{
