--- a/src/pages/Sales/add_sales/add_sale.css
+++ b/src/pages/Sales/add_sales/add_sale.css
@@ -1,78 +1,163 @@
 .add_sale_main{
-    background-color: rgb(199, 176, 146);
-}
-.label_product{
-    color: rgb(13, 13, 12);
-}
-.available_units{
-    margin: -10px 10px 10px 10px;
-    display: flex;
-}
-.units_available{
-    margin: -0px 10px 10px 10px;
-}
-.sales_main{
-    background-color: aqua;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 10px 20px 10px 20px;
-    border-radius: 10px;
+    
     padding: 20px;
 }
-.add_sale_heading{
+.add_sale_h1{
     text-align: center;
 }
-.sales_left{}
-.sales_right{}
 
+.add_sale{
 
+}
+.add_sale_1{
+    background-color: var(--form-backgroung-color);
+    padding: 10px;
+    
+}
+.add_sale_1_1{
+    display: flex;
+    justify-content: space-evenly;
+}
+.add_sale_1_2{
+    display: flex;
+    justify-content: space-evenly;
+}
+.add_sale_2{
+    display: flex;
+    background-color:rgba(197, 197, 197, 0.819);
+    padding: 20px 10px 20px 10px;
+}
+.add_sale_btn_1{
+    position:absolute;
+    left: 90%;
+    top: 0px;
+/* CSS */
 
-.input_product{
-    color: antiquewhite;
-    border: 2px solid black;
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
 }
 
-.add_button{
-    margin: 20px 10px 10px 10px ;
-    position: relative;
-    background-color:#0a0a23;
-    left: 80%;
-    color: #fff;
-    border:none; 
-    border-radius:10px; 
-    padding:15px;
-    min-height:30px; 
-    min-width: 120px;
+.add_sale_btn_1:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
-.add_button:hover {
-      background-color:#002ead;
-      transition: 0.7s;
-  }
 
-  .submit_button{
-    margin: 50px 10px 10px 10px ;
-    position: relative;
-    background-color:#2e032c;
-    left: 80%;
-    color: #fff;
-    border:none; 
-    border-radius:10px; 
-    padding:15px;
-    min-height:30px; 
-    min-width: 120px;
+.add_sale_btn_1:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
 }
-.submit_button:hover {
-      background-color:#c803f9;
-      transition: 0.7s;
-  }
+
+.add_sale_btn_1:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
 
 
-  .bill_heading{
-    text-align: center;
-  }
 
-  .sale_report{
-    background-color: aqua;
-    margin: 10px 20px 10px 20px;
-    border-radius: 10px;
-  }
+table{
+    margin: 50px 10px 10px 10px;
+    border: 1px solid black;
+    
+}
+thead{
+    background-color: rgb(215, 215, 215);
+}
+th{
+    
+    border: 1px solid black;
+}
+tbody{
+    background-color: rgb(240, 240, 240);
+    border: 1px solid black;
+    
+}
+tr{
+    border: 1px solid black;
+    
+}
+td{
+    border: 1px solid black;
+    
+}
+.bill_delete_btn{
+    margin-left: 5px;
+}
+.bill_edit_btn{
+    margin-left: 10px;
+}
+
+
+
+
+
+.bill_btn {
+    position:absolute;
+    left: 90%;
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.bill_btn:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.bill_btn:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.bill_btn:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
