--- a/src/pages/production_Inputs/edite/edite.css
+++ b/src/pages/production_Inputs/edite/edite.css
@@ -1,11 +1,11 @@
-.edite_div_main{
-    background-color: aquamarine;
-}
+/* .edite_div_main{
+    background-color: var(--edite_table-background);
+} */
 .edite_h1{
     text-align: center;
 }
 .edite_div{
-    background-color: aqua;
+    background-color: var(--edite_table-background);
     margin: 10px 20px 10px 20px;
     border-radius: 10px;
 }
@@ -20,12 +20,13 @@
     border-radius: 10px;
 }
 .edite_div_2{
-    background-color: blue;
+    
     margin: 10px 20px 10px 20px;
     border-radius: 10px;
+    overflow: scroll;
 }
 .edite_div_3{
     display: flex;
     justify-content: space-evenly;
-    background-color: antiquewhite;
+    background-color: var(--edite-data);
 }
