--- a/src/pages/production_output/view/inventoryVIEW.css
+++ b/src/pages/production_output/view/inventoryVIEW.css
@@ -1,22 +1,18 @@
 .inventory{
-    background-color:aquamarine;
+    background-color:var(--table-background);
 }
 .inventory-view-title{
      text-align: center;
+     
 }
-.inventory-view-container{
+/* .inventory-view-container{
    
     background-color: aqua;
     margin: 10px 100px 10px 100px;
     padding: 20px;
     border-radius: 10px;
-}
+} */
 .inventory-view{
-    
-    background-color: antiquewhite;
-    width: 70%;
-    margin: 30px auto 30px auto;
-    padding: 20px;
-    border-radius: 10px;
+   overflow: scroll;
     
 }
