--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
   text-align: center;
-  background-color: aliceblue;
-  
-}
+  }
 
 .main{
   margin-left: 60px;
@@ -11,22 +9,32 @@
 
 
 :root{
-  --form-backgroung-color:#f2f2f2;
+
+  --primary-color:rgb(0, 28, 48); /* Replace with your chosen primary color */
+  --secondary-color:rgb(23, 107, 135); /* Replace with your chosen secondary color */
+  --accent-color:rgb(100, 204, 197); /* Replace with your chosen accent color */
+  --background-color: rgb(218, 255, 251); /* Replace with your chosen background color */
+
+
+
+
+  --form-backgroung-color:rgba(100, 204, 197, 0.223);
   --form-text-color: #000000;
   --form-text-font-size: 16px;
   --form-text-font-family: Arial, sans-serif;
 
-  --table-background:rgb(204, 204, 204);
+  --table-background:rgb(100, 204, 197);
 
   --edite_table-background:rgba(65, 65, 65, 0.458);
   --edite-data:rgba(23, 23, 23, 0.177);
 }
 
 table{
+  
   margin: 10px auto;
   overflow: scroll;
-  overflow-x: auto; /* horizontal scrolling */
-  overflow-y: visible; /* vertical overflow visible */
+  overflow-x: auto; 
+  overflow-y: visible; 
   border-collapse: collapse;
   
 }
@@ -34,6 +42,20 @@ table{
 th, td {
   text-align: left;
   padding: 8px;
+}
+th{
+    
+  border: 1px solid black;
+}
+
+tr{
+  border: 1px solid black;
+  
+}
+td{
+  border: 1px solid black;
+  text-align: center;
+  
 }
 tr:nth-child(even){background-color: #f2f2f2}
 th {
@@ -49,27 +71,34 @@ tbody{
 
 /* sub nav */
 .nav_2{
-   background-color: rgba(23, 24, 24, 0.682);
+  margin-left: -60px;
+   background-color:rgb(0, 28, 48);
    display: flex;
    justify-content: space-evenly;
    height: 50px;
+   border-top: 2px solid rgba(245, 245, 220, 0.096);
 }
 .setting_nav_item_{
-  color: rgb(66, 66, 66);
-  padding: 10px;
+  margin: 5px;
+  
+  padding: 2px;
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.099);
+
+  backdrop-filter: blur(50px);
   
 
 }
 .setting_nav_item_active_{
-  padding: 11px;
-  border-bottom: 5px solid rgba(255, 255, 0, 0.341);
-
+  margin: 5px;
+  padding: 2px;
 }
 .nav-link_{
   color: rgb(232, 232, 232);
   text-decoration: none;
   font-size: 20px;
   font-weight: 600;
+ 
   
 }
 
