--- a/src/pages/Reports/raw_stock_report/raw_stock_report.css
+++ b/src/pages/Reports/raw_stock_report/raw_stock_report.css
@@ -1,8 +1,10 @@
 .raw_data_table{
-    width: 1500px;
+    width: 1200px;
     overflow: scroll;
     margin-left: 60px;
 }
 .raw_data_acc_name{
     text-align: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
