--- a/src/pages/production_Inputs/view/view.css
+++ b/src/pages/production_Inputs/view/view.css
@@ -1,5 +1,10 @@
+.view_container{
+    background-color: var(--background-color);
+}
 .view_title{
     text-align: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     
 }
 
@@ -9,5 +14,6 @@
 }
 
 .view_table{
+    padding: 10px;
     overflow: scroll;
 }
