--- a/src/pages/setting/raw_input_unit/Raw_units.css
+++ b/src/pages/setting/raw_input_unit/Raw_units.css
@@ -1,13 +1,27 @@
-.add_unit_title{
+.add_unit_title,.view_unit_title{
     text-align: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .add_unit_container{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+   justify-content: center;
+   padding: 20px 40px 20px 40px;
+   width: max-content;
+   
+   background-color: rgba(144, 144, 144, 0.222);
+    margin: 0px auto;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.add_unit_label{
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
 }
 .add_unit_input{
-    border: 2px solid black;
+    border: 1px solid black;
+    text-align: center;
 }
 .add_unit_btn{
     
@@ -36,6 +50,11 @@
                         text-align: center;
 }
 .view_unit_container{
+    width: fit-content;
     display: flex;
     justify-content: center;
+    background-color: rgba(144, 144, 144, 0.222);
+    margin: 0px auto;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
