--- a/src/pages/setting/raw_name/raw_name.css
+++ b/src/pages/setting/raw_name/raw_name.css
@@ -2,10 +2,22 @@
 
 .raw_name_add{
     display: flex;
+    width: max-content;
+    padding: 20px 40px 20px 40px;
     justify-content: center;
+    background-color: rgba(144, 144, 144, 0.222);
+    margin: 0px auto;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;;
+}
+.raw_name_label{
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
 }
 .raw_name_input{
-    border: 2px solid black;
+    border: 1px solid black;
+    text-align: center;
 }
 
 .raw_name_button{
@@ -33,8 +45,15 @@
 
 .raw_name_h1{
     text-align: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 .raw_name_view{
     display: flex;
-    justify-content: center;
+        width: max-content;
+        justify-content: center;
+        background-color: rgba(144, 144, 144, 0.222);
+        margin: 0px auto;
+        border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
