--- a/src/pages/Reports/product_stock_report/product_stock_report.css
+++ b/src/pages/Reports/product_stock_report/product_stock_report.css
@@ -2,6 +2,7 @@
     text-align: center;
   font-size: 40px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-family: var(--header-text-font);
 }
 
 .raw_data_acc_name_table_table_{
