--- a/src/pages/Dashboad/dashboad.css
+++ b/src/pages/Dashboad/dashboad.css
@@ -10,6 +10,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .dashboad-summery{
     border-bottom: 20px solid var(--accent-color);
