--- a/src/pages/Reports/raw_input_report/raw_input_report.css
+++ b/src/pages/Reports/raw_input_report/raw_input_report.css
@@ -14,6 +14,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .raw_data_acc_name_div{
     padding: 20px;
