--- a/src/pages/production_Inputs/select_Raw_imaterials.jsx/select_raw_inputs.css
+++ b/src/pages/production_Inputs/select_Raw_imaterials.jsx/select_raw_inputs.css
@@ -8,6 +8,9 @@ label{
     text-align: right;
     position: relative;
 }
+.raw_input_{
+    margin: 15px auto 15px auto;
+}
 input{
     border: 1px solid black;
 }
@@ -15,61 +18,57 @@ input, select{
     width: 250px;
     
 }
+.raw_production_label{
+    text-align: left;
+}
+.availability{
+    margin:auto 10px auto -15px;
+}
+.colan{
+    font-weight: 700;
+}
+.colan_{
+    font-weight: 700;
+    margin-right: 10px;
+}
 .select_raw_inputs_h1{
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .select_raw_inputs_div{
     background-color: var(--form-backgroung-color);
     margin: 10px 40px 10px 40px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 20px 60px 20px 60px;
 
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    display: flex;
+    justify-content: space-between;
     
 }
-.select_raw_inputs_div_1{
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-}
-.select_raw_inputs_div_2{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
-    text-align: right;
-}
+
+
 .select_raw_inputs_div_2_1{
+    width: 500px;
+    height: 50px;
+    
     display: flex;
+    
 }
-.select_raw_inputs_div_3{
+.quantity_used{
+    width: 390px;
+}
+
+
+.raw_input_{
+    width: 500px;
+    height: 50px;
+    
     display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
-    text-align: right;
-}
-.select_raw_inputs_div_4{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
-    text-align: right;
-}
-.select_raw_inputs_div_5{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
-}
-.select_raw_inputs_div_6{
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-}
-.raw_input{
-    width: 200px;
-    height: 20px;
-    background-color: aquamarine;
-    border-radius: 25px;
+    justify-content: space-between;
+    
 }
 .select_qty_div{
     display: flex;
