--- a/src/pages/production_Inputs/view/view.css
+++ b/src/pages/production_Inputs/view/view.css
@@ -5,6 +5,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
     
 }
 
