--- a/src/pages/setting/product_input_units/product_input_units.css
+++ b/src/pages/setting/product_input_units/product_input_units.css
@@ -2,6 +2,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .product_units_container{
    display: flex;
