--- a/src/pages/setting/product_name/product_name.css
+++ b/src/pages/setting/product_name/product_name.css
@@ -4,6 +4,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .product_name_container{
     display: flex;
@@ -51,6 +52,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .product_name_container_view{
         display: flex;
