--- a/src/pages/setting/raw_input_unit/Raw_units.css
+++ b/src/pages/setting/raw_input_unit/Raw_units.css
@@ -2,6 +2,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .add_unit_container{
     display: flex;
