--- a/src/pages/setting/raw_name/raw_name.css
+++ b/src/pages/setting/raw_name/raw_name.css
@@ -8,7 +8,8 @@
     background-color: rgba(144, 144, 144, 0.222);
     margin: 0px auto;
     border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
 }
 .raw_name_label{
     color: black;
@@ -47,6 +48,7 @@
     text-align: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: var(--header-text-font);
 }
 .raw_name_view{
     display: flex;
